# v2

./: .env-example  .gitignore  LICENSE  README.md  alerts.txt  codebase.js  fubelt.json  index.js  nodemon.json  package.json  tailwind.config.js  todo.txt
app/config/: .env  defaults.js
app/plugins/: Q4-qck.js  Q4-sta.js  Q4.js
app/scripts/: build.js  lines.js  prequisites.js  test-db.js  tests.js
app/seeds/: intents.js  roles.js
public/: app.css  app.js  countries.json  global.css  global.js
public/admin/: permissions.js  pterodactyl.js  settings.js  users.js
public/client/: account.js  deploy.js  economy.js  market.js
public/common/: app.js  tailwind.css  tailwind.min.css
public/framework/: main.js
public/libraries/: apexcharts.js
src/: app.js
src/modules/HCW/src/: CMakeLists.txt  binding.gyp  build.sh  buildAll.js  config.json  package.json  test.js
src/modules/HCW/src/bindings/node/: binding.gyp  package.json  server_wrap.cpp  server_wrap.h  test.js
src/modules/HCW/src/bindings/node/lib/: index.js
src/modules/HCW/src/bindings/node/scripts/: build-symmap.js  build.js  copy-addon.js  symbols.map
src/modules/HCW/src/lib/: index.js
src/modules/HCW/src/src/: app.cpp  app.h  build_res.asm  error.h  main.cpp  socket.cpp  socket.h
src/modules/HCW/src/src/config/: config.cpp  config.h
src/modules/HCW/src/src/http/: http_common.h  methods.cpp  methods.hpp  parser.asm  parser.cpp  parser.h  parser.hpp  request.h  request.hpp  response.h  response.hpp  router.cpp  router.h  router.hpp  server.cpp  server.h  server.hpp  types.h
(+123 files in other folders)
